; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_coff-ppc.c_ppc_coff_link_hash_table_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_coff-ppc.c_ppc_coff_link_hash_table_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ppc_coff_link_hash_table = type { i32 }
%struct.bfd_hash_entry = type opaque
%struct.bfd_hash_table = type opaque
%struct.bfd_hash_entry.0 = type opaque
%struct.bfd_hash_table.1 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ppc_coff_link_hash_table*, i32*, %struct.bfd_hash_entry* (%struct.bfd_hash_entry*, %struct.bfd_hash_table*, i8*)*, i32)* @ppc_coff_link_hash_table_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ppc_coff_link_hash_table_init(%struct.ppc_coff_link_hash_table* %0, i32* %1, %struct.bfd_hash_entry* (%struct.bfd_hash_entry*, %struct.bfd_hash_table*, i8*)* %2, i32 %3) #0 {
  %5 = alloca %struct.ppc_coff_link_hash_table*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.bfd_hash_entry* (%struct.bfd_hash_entry*, %struct.bfd_hash_table*, i8*)*, align 8
  %8 = alloca i32, align 4
  store %struct.ppc_coff_link_hash_table* %0, %struct.ppc_coff_link_hash_table** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.bfd_hash_entry* (%struct.bfd_hash_entry*, %struct.bfd_hash_table*, i8*)* %2, %struct.bfd_hash_entry* (%struct.bfd_hash_entry*, %struct.bfd_hash_table*, i8*)** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.ppc_coff_link_hash_table*, %struct.ppc_coff_link_hash_table** %5, align 8
  %10 = getelementptr inbounds %struct.ppc_coff_link_hash_table, %struct.ppc_coff_link_hash_table* %9, i32 0, i32 0
  %11 = load i32*, i32** %6, align 8
  %12 = load %struct.bfd_hash_entry* (%struct.bfd_hash_entry*, %struct.bfd_hash_table*, i8*)*, %struct.bfd_hash_entry* (%struct.bfd_hash_entry*, %struct.bfd_hash_table*, i8*)** %7, align 8
  %13 = bitcast %struct.bfd_hash_entry* (%struct.bfd_hash_entry*, %struct.bfd_hash_table*, i8*)* %12 to %struct.bfd_hash_entry.0* (%struct.bfd_hash_entry.0*, %struct.bfd_hash_table.1*, i8*)*
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @_bfd_coff_link_hash_table_init(i32* %10, i32* %11, %struct.bfd_hash_entry.0* (%struct.bfd_hash_entry.0*, %struct.bfd_hash_table.1*, i8*)* %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @_bfd_coff_link_hash_table_init(i32*, i32*, %struct.bfd_hash_entry.0* (%struct.bfd_hash_entry.0*, %struct.bfd_hash_table.1*, i8*)*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
